--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start": "cross-env NODE_ENV=development webpack serve",
     "build": "cross-env NODE_ENV=production webpack --mode production --json > stats.json && webpack-bundle-analyzer stats.json build --report report.html --mode static -O && cross-env NODE_ENV=production webpack",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,scss}\"",
-    "lint": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\""
+    "lint": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\"",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -35,6 +37,8 @@
     "eslint-plugin-react": "^7.27.1",
     "fork-ts-checker-webpack-plugin": "^6.4.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.2",
     "mini-css-extract-plugin": "^2.2.0",
     "mini-svg-data-uri": "^1.3.3",
     "postcss": "^8.3.6",
@@ -72,5 +76,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "*.(ts|tsx)": "npm run lint"
   }
 }
