--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
+    "@mui/x-data-grid": "^5.5.1",
     "material-ui-popup-state": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
