--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
     "@mui/x-data-grid": "^5.5.1",
+    "chart.js": "^3.7.1",
     "material-ui-popup-state": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
